# BasicSoftwareRender

./: Cargo.toml  README.md
src/: bitmap.rs  display.rs  edge.rs  interpolant.rs  main.rs  mesh_loader.rs  render_system.rs  scanline.rs  stars_3D.rs
