[package]
name = "basic_software_render"
version = "0.1.0"
authors = ["Andrew Choi <choi681@purdue.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
winit ="0.23.0"
pixels = "0.2"
winit_input_helper = "0.8.0"
rand = "0.7.3"
nalgebra = "0.23.0"